--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -204,3 +204,30 @@ body {
 }
 
 
+.AXMFormStandardMargin {
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+
+.AXMFormSectionHeader {
+    height: 33px;
+    line-height: 33px;
+
+    padding-left:8px;
+    font-weight: bold;
+
+    border-top: 1px solid rgb(220,220,220);
+    border-bottom: 1px solid rgb(220,220,220);
+
+    color: rgb(105, 105, 105);
+    background: rgb(255,255,255);
+    background: -moz-linear-gradient(top,  rgb(255,255,255) 0%, rgb(230,230,230) 62%, rgb(250,250,250) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,255,255)), color-stop(62%,rgb(230,230,230)), color-stop(100%,rgb(250,250,250)));
+    background: -webkit-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);
+    background: -o-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);
+    background: -ms-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);
+    background: linear-gradient(to bottom,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fafafa',GradientType=0 );
+}
