--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -18,6 +18,18 @@ body {
 }
 
 
+
+.AXMEdit {
+    border: 1px solid rgb(192,192,192);
+    padding-left:2px;
+}
+
+.AXMEdit:focus {
+    border: 1px solid rgb(0, 64, 149);
+    box-shadow: 0;
+    outline: none;
+}
+
 /*************************** Frames  **************************************************/
 
 .AXMFrame, .AXMSplitter {
