--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -34,15 +34,15 @@
     padding-right:8px;
     box-sizing: border-box;
 
-    background: rgb(21,136,197);
-    background: -moz-linear-gradient(top,  rgb(21,136,197) 0%, rgb(16,116,169) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(21,136,197)), color-stop(100%,rgb(16,116,169)));
-    background: -webkit-linear-gradient(top,  rgb(21,136,197) 0%,rgb(16,116,169) 100%);
-    background: -o-linear-gradient(top,  rgb(21,136,197) 0%,rgb(16,116,169) 100%);
-    background: -ms-linear-gradient(top,  rgb(21,136,197) 0%,rgb(16,116,169) 100%);
-    background: linear-gradient(to bottom,  rgb(21,136,197) 0%,rgb(16,116,169) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1588c5', endColorstr='#1074a9',GradientType=0 );
-
+    background: rgb(49,165,191); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(49,165,191,1) 0%, rgba(0,135,165,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(49,165,191,1)), color-stop(100%,rgba(0,135,165,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#31a5bf', endColorstr='#0087a5',GradientType=0 ); /* IE6-9 */
+    
     color: white;
     font-weight: bold;
 
