--- a/CSS/AXMPgTable.css
+++ b/CSS/AXMPgTable.css
@@ -175,3 +175,43 @@
     background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#a6000000', GradientType=1); /* IE6-9 */
 }
+
+
+.AXMCrossTable {
+    border-collapse: collapse;
+
+    /*border-collapse: separate;*/
+    /*border-spacing: 0;*/
+    /*border-color: rgb(180,180,180);*/
+    /*margin: 0;*/
+    /*border-width: 1;*/
+    /*table-layout: fixed;*/
+    /*outline-width: 0;*/
+}
+
+.AXMCrossTable, .AXMCrossTable th, .AXMCrossTable td {
+    border: 1px solid rgb(205,205,205);
+    padding: 0px;
+}
+
+.AXMCrossTable th {
+    background-color: rgb(230,230,230);
+    padding:8px;
+}
+
+.AXMCrossTable td {
+    cursor: pointer;
+}
+.AXMCrossTableCell, .AXMCrossTableCell th, .AXMCrossTableCell td {
+    background-color: transparent;
+    border: none;
+    padding: 0px;
+    text-align: left;
+}
+
+.AXMCrossTableCell th {
+    padding:0px;
+    font-weight: normal;
+    color: rgb(120,120,120);
+}
+
