--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -106,10 +106,10 @@ body {
 
 .AXMFrameTabElement {
     font-weight:bold;
-    height:20px;
-    padding-top:4px;
-    padding-left: 9px;
-    padding-right: 9px;
+    height:22px;
+    padding-top:6px;
+    padding-left: 15px;
+    padding-right: 15px;
     border: 1px solid rgb(180,180,180);
     border-bottom: none;
     display:inline-block;
@@ -254,10 +254,10 @@ body {
 
 
 .AXMFormStandardMargin {
-    margin-left: 12px;
-    margin-right: 12px;
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin-left: 14px;
+    margin-right: 14px;
+    margin-top: 18px;
+    margin-bottom: 18px;
 }
 
 .AXMFormVScroller {
@@ -382,4 +382,17 @@ body {
 .AXMFileDropDragOver {
     background-color: #a2e6ee;
     border:2px dashed #7d7d7d;
+}
+
+
+.AXMBigIcon {
+    color: rgb(148, 202, 212);
+    text-shadow: 1px 1px 1px rgba(100, 100, 100, 0.25);
+    font-size: 60px
+}
+
+.AXMPopupHeaderIcon {
+    color: rgb(220, 238, 242);
+    text-shadow: 1px 1px 8px rgba(0, 0, 0, 1);
+    font-size: 44px
 }
