--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -28,8 +28,8 @@
 
 .AXMPopupWindowHeader {
     width:100%;
-    height:32px;
-    line-height: 32px;
+    height:36px;
+    line-height: 36px;
     padding-left:8px;
     padding-right:8px;
     box-sizing: border-box;
@@ -45,6 +45,7 @@
 
     color: white;
     font-weight: bold;
+    font-size: 110%;
 
     cursor:pointer;
 }
