--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -188,22 +188,15 @@ body {
     color: rgb(0, 106, 130);
 }
 
-.AXMButtonHelp {
-    background: transparent;
-    color: rgb(66, 173, 108);
-    opacity:0.4
-}
 
-.AXMButtonHelp:hover {
-    background: transparent !important;
-    opacity:1
-}
+
 
 .AXMButtonCommandBar {
     display: inline-block;
     background-color: transparent;
     color: rgb(137, 137, 137);
     border: none;
+    cursor: pointer
 }
 
 .AXMButtonChecked {
@@ -228,12 +221,14 @@ body {
     display: inline-block;
     background-color: transparent;
     color: rgb(0, 126, 190);
-    opacity: 0.5;
+    opacity: 0.6;
     border: none;
+    cursor: pointer;
+    text-shadow: 1px 1px 2px rgba(100, 100, 100, 0.5);
 }
 
-.AXMButtonHelp:hover {
-    background-color: rgba(255,192,0,0.35);
+.AXMButtonHelp:hover .AXMButtonIcon {
+    /*background-color: rgba(255,192,0,0.35);*/
     opacity: 1;
 }
 
