--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -14,6 +14,11 @@
     opacity: 0 !important;
 }
 
+.AXMBlockingBackGroundOpaque {
+    background-color:rgb(230,230,230) !important;
+    opacity: 1 !important;
+}
+
 .AXMPopupWindowContainer {
     left:90px;
     top:70px;
