--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -7,8 +7,9 @@ html,body {
 }
 
 body {
-    font-size:9pt;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size:13px;
+    /*font-family: Calibri W01 Regular, Arial, Helvetica, sans-serif;*/
+    font-family: Helvetica,Arial,sans-serif
 }
 
 .AXMContainer {
