--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -227,7 +227,7 @@ body {
     opacity: 0.6;
     border: none;
     cursor: pointer;
-    text-shadow: 1px 1px 2px rgba(100, 100, 100, 0.5);
+    text-shadow: none;
 }
 
 .AXMButtonHelp:hover .AXMButtonIcon {
