--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -34,7 +34,7 @@ body {
 /*************************** Frames  **************************************************/
 
 .AXMFrame, .AXMSplitter {
-    background-color: rgb(230,230,230); /* BCK1 */
+    /*background-color: rgb(230,230,230); /!* BCK1 *!/*/
 }
 
 .AXMSplitter {
@@ -403,3 +403,82 @@ body {
     cursor: pointer;
     color: rgb(37, 103, 216);
 }
+
+.flexTabWrapperFull {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(230,230,230);
+    /*border-right: 1px solid rgb(160,160,160);*/
+    /*box-sizing: border-box;*/
+}
+
+.flexTabWrapper {
+    width: 100%;
+    background-color: rgb(230,230,230);
+}
+
+.AXMFlexTab {
+    width:100%;
+    height: 50px;
+    margin-right:-10px;
+    position:relative;
+    box-sizing: border-box;
+    z-index: 0;
+    color: rgb(130,130,130);
+    margin-left: 3px;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    cursor: pointer;
+    transition:background-color 0.25s linear;
+}
+
+.AXMFlexTabContent {
+    padding-left:7px;
+    padding:10px;
+}
+
+.AXMFlexTabActive {
+    background-color: white;
+    color: black;
+    /*border-left: 1px solid rgb(220,220,220);*/
+    /*border-top: 1px solid rgb(220,220,220);*/
+    /*border-bottom: 1px solid rgb(220,220,220);*/
+    box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.35);
+    z-index: 2;
+}
+
+.AXMFlexTabInactive {
+}
+
+.AXMFlexTabInactive:hover {
+    background-color: rgb(250,242,235);
+}
+
+.AXMFlexTabInActiveHighlight {
+    background-color: rgb(255, 228, 145);
+    color: rgb(158, 7, 1) !important;
+}
+
+.AXMFlexTabCloser, .AXMFlexTabToPopup {
+    position:absolute;
+    right:5px;
+    top:6px;
+    cursor:pointer;
+    font-size: 20px;
+    /*color: rgb(102, 102, 102);*/
+    /*visibility: hidden;*/
+    opacity:0;
+    color: rgb(0, 97, 158);
+    transition:opacity 0.5s linear;
+}
+
+.AXMFlexTabToPopup {
+    right:25px;
+}
+
+.AXMFlexTab:hover .AXMFlexTabCloser, .AXMFlexTab:hover .AXMFlexTabToPopup {
+    visibility: visible;
+    opacity:0.25;
+}
+
+
