--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -57,17 +57,44 @@
 
 .SWXPopupWindowCloseBox {
     position:absolute;
-    right:-10px;
-    top:-10px;
+    right:8px;
+    top:8px;
     cursor:pointer;
+    font-size: 22px;
+    color: white;
+    opacity:0.5;
+    transition:opacity 0.25s linear;
+    /*position:absolute;*/
+    /*right:-10px;*/
+    /*top:-10px;*/
+    /*width:25px;*/
+    /*height:25px;*/
+    /*cursor:pointer;*/
 }
 
+
 .SWXPopupWindowCloseBox:hover {
-    filter: brightness(120%);
-    -webkit-filter: brightness(120%);
-    -moz-filter: brightness(120%);
-    -o-filter: brightness(120%);
-    -ms-filter: brightness(120%);
+    opacity: 0.9;
+    /*filter: brightness(120%);*/
+    /*-webkit-filter: brightness(120%);*/
+    /*-moz-filter: brightness(120%);*/
+    /*-o-filter: brightness(120%);*/
+    /*-ms-filter: brightness(120%);*/
+}
+
+.SWXPopupWindowDockBox {
+    position:absolute;
+    right:32px;
+    top:8px;
+    cursor:pointer;
+    font-size: 22px;
+    color: white;
+    opacity:0.5;
+    transition:opacity 0.25s linear;
+}
+
+.SWXPopupWindowDockBox:hover {
+    opacity: 0.9;
 }
 
 .AXMPopupWindowClient {
