--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -423,7 +423,7 @@ body {
     margin-right:-10px;
     position:relative;
     box-sizing: border-box;
-    /*z-index: 0;*/
+    z-index: 0;
     margin-left: 3px;
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
@@ -432,7 +432,7 @@ body {
 }
 
 .AXMFlexTabContent {
-    padding-left:7px;
+    padding-left:5px;
     padding:10px;
     white-space:nowrap;
     vertical-align: top;
@@ -461,7 +461,7 @@ body {
     /*border-top: 1px solid rgb(220,220,220);*/
     /*border-bottom: 1px solid rgb(220,220,220);*/
     box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.35);
-    /*z-index: 2;*/
+    z-index: 1;
 }
 
 .AXMFlexTabActive .AXMFlexTabIcon {
@@ -487,7 +487,7 @@ body {
 .AXMFlexTabCloser, .AXMFlexTabToPopup {
     position:absolute;
     right:5px;
-    top:6px;
+    top:4px;
     cursor:pointer;
     font-size: 20px;
     /*color: rgb(102, 102, 102);*/
