--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -6,7 +6,8 @@
     top: 0px;
     width: 100%;
     height: 100%;
-    background-color:rgba(200,200,200,0.5);
+    background-color:rgb(225,225,225);
+    opacity: 0.0;
 }
 
 .AXMBlockingBackGroundTransp {
