--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -134,7 +134,7 @@
     position:absolute;
     background-color: #fafafa;
 
-    border-radius: 6px;
+    border-radius: 10px;
     border:1px solid rgb(179, 179, 179);
     box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.25);
 }
@@ -171,4 +171,19 @@
 
 .AXMTransientClient {
     padding: 15px;
+}
+
+.SWXTransientCloseBox {
+    position:absolute;
+    right:4px;
+    top:4px;
+    cursor:pointer;
+    font-size: 18px;
+    color: rgb(128,128,128);
+    opacity:0.4;
+    transition:opacity 0.25s linear;
+}
+
+.SWXTransientCloseBox:hover {
+    opacity: 1.0;
 }
