--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -174,27 +174,27 @@ body {
     cursor:pointer;
 
     color: rgb(86, 86, 86);
-    background: rgb(255,255,255);
-    background: -moz-linear-gradient(top,  rgb(255,255,255) 0%, rgb(230,230,230) 62%, rgb(250,250,250) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,255,255)), color-stop(62%,rgb(230,230,230)), color-stop(100%,rgb(250,250,250)));
-    background: -webkit-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);
-    background: -o-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);
-    background: -ms-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);
-    background: linear-gradient(to bottom,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fafafa',GradientType=0 );
+    /*background: rgb(255,255,255);*/
+    /*background: -moz-linear-gradient(top,  rgb(255,255,255) 0%, rgb(230,230,230) 62%, rgb(250,250,250) 100%);*/
+    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,255,255)), color-stop(62%,rgb(230,230,230)), color-stop(100%,rgb(250,250,250)));*/
+    /*background: -webkit-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);*/
+    /*background: -o-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);*/
+    /*background: -ms-linear-gradient(top,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);*/
+    /*background: linear-gradient(to bottom,  rgb(255,255,255) 0%,rgb(230,230,230) 62%,rgb(250,250,250) 100%);*/
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fafafa',GradientType=0 );*/
 
 }
 
 
 .AXMButton:hover {
-    background: rgb(255,240,216);
-    background: -moz-linear-gradient(top,  rgb(255,240,216) 0%, rgb(255,225,173) 62%, rgb(249,236,212) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,240,216)), color-stop(62%,rgb(255,225,173)), color-stop(100%,rgb(249,236,212)));
-    background: -webkit-linear-gradient(top,  rgb(255,240,216) 0%,rgb(255,225,173) 62%,rgb(249,236,212) 100%);
-    background: -o-linear-gradient(top,  rgb(255,240,216) 0%,rgb(255,225,173) 62%,rgb(249,236,212) 100%);
-    background: -ms-linear-gradient(top,  rgb(255,240,216) 0%,rgb(255,225,173) 62%,rgb(249,236,212) 100%);
-    background: linear-gradient(to bottom,  rgb(255,240,216) 0%,rgb(255,225,173) 62%,rgb(249,236,212) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff0d8', endColorstr='#f9ecd4',GradientType=0 );
+    /*background: rgb(255,240,216);*/
+    /*background: -moz-linear-gradient(top,  rgb(255,240,216) 0%, rgb(255,225,173) 62%, rgb(249,236,212) 100%);*/
+    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,240,216)), color-stop(62%,rgb(255,225,173)), color-stop(100%,rgb(249,236,212)));*/
+    /*background: -webkit-linear-gradient(top,  rgb(255,240,216) 0%,rgb(255,225,173) 62%,rgb(249,236,212) 100%);*/
+    /*background: -o-linear-gradient(top,  rgb(255,240,216) 0%,rgb(255,225,173) 62%,rgb(249,236,212) 100%);*/
+    /*background: -ms-linear-gradient(top,  rgb(255,240,216) 0%,rgb(255,225,173) 62%,rgb(249,236,212) 100%);*/
+    /*background: linear-gradient(to bottom,  rgb(255,240,216) 0%,rgb(255,225,173) 62%,rgb(249,236,212) 100%);*/
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff0d8', endColorstr='#f9ecd4',GradientType=0 );*/
 }
 
 .AXMButtonIcon {
