--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -60,7 +60,7 @@
     cursor:pointer;
 }
 
-.SWXPopupWindowCloseBox {
+.SWXPopupWindowCloseBox, .SWXPopupWindowHelpBox {
     position:absolute;
     right:8px;
     top:8px;
@@ -77,8 +77,13 @@
     /*cursor:pointer;*/
 }
 
+.SWXPopupWindowHelpBox {
+    right:35px;
 
-.SWXPopupWindowCloseBox:hover {
+}
+
+
+.SWXPopupWindowCloseBox:hover, .SWXPopupWindowHelpBox:hover {
     opacity: 0.9;
     /*filter: brightness(120%);*/
     /*-webkit-filter: brightness(120%);*/
