--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -1,218 +1,214 @@
 /*************************** PopupWindow  **************************************************/
 
 .AXMDraggable {
-  opacity: 0.9 !important;
-}
+    opacity: 0.9 !important;
+}  
 
 .AXMBlockingBackGround {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(225, 225, 225);
-  opacity: 0;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color:rgb(225,225,225);
+    opacity: 0.0;
 }
 
 .AXMBlockingBackGroundTransp {
-  background-color: rgba(200, 200, 200, 0) !important;
-  opacity: 0 !important;
+    background-color:rgba(200,200,200,0.0) !important;
+    opacity: 0 !important;
 }
 
 .AXMBlockingBackGroundOpaque {
-  background-color: rgb(230, 230, 230) !important;
-  opacity: 1 !important;
+    background-color:rgb(230,230,230) !important;
+    opacity: 1 !important;
 }
 
 .AXMPopupWindowContainer {
-  left: 90px;
-  top: 70px;
-  position: absolute;
-  background-color: white;
+    left:90px;
+    top:70px;
+    position:absolute;
+    background-color: white;
 
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(110, 110, 110);
-  box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.75);
-  border-radius: 5px;
-  overflow: hidden;
+    border-width:1px;
+    border-style:solid;
+    border-color:rgb(110,110,110);
+    box-shadow: 2px 2px 20px 4px rgba(0,0,0,0.75);
+    border-radius:5px;
+    overflow: hidden;
 }
 
 .AXMPopupWindowHeader {
-  width: 100%;
-  height: 36px;
-  line-height: 36px;
-  padding-left: 8px;
-  padding-right: 8px;
-  box-sizing: border-box;
-  /*border-top-left-radius:5px;*/
-  /*border-top-right-radius:5px;*/
+    width:100%;
+    height:36px;
+    line-height: 36px;
+    padding-left:8px;
+    padding-right:8px;
+    box-sizing: border-box;
+    /*border-top-left-radius:5px;*/
+    /*border-top-right-radius:5px;*/
 
-  /*background: rgb(49,165,191); /!* Old browsers *!/*/
-  /*background: -moz-linear-gradient(top, rgba(49,165,191,1) 0%, rgba(0,135,165,1) 100%); /!* FF3.6+ *!/*/
-  /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(49,165,191,1)), color-stop(100%,rgba(0,135,165,1))); /!* Chrome,Safari4+ *!/*/
-  /*background: -webkit-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* Chrome10+,Safari5.1+ *!/*/
-  /*background: -o-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* Opera 11.10+ *!/*/
-  /*background: -ms-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* IE10+ *!/*/
-  /*background: linear-gradient(to bottom, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* W3C *!/*/
-  /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#31a5bf', endColorstr='#0087a5',GradientType=0 ); /!* IE6-9 *!/*/
+    /*background: rgb(49,165,191); /!* Old browsers *!/*/
+    /*background: -moz-linear-gradient(top, rgba(49,165,191,1) 0%, rgba(0,135,165,1) 100%); /!* FF3.6+ *!/*/
+    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(49,165,191,1)), color-stop(100%,rgba(0,135,165,1))); /!* Chrome,Safari4+ *!/*/
+    /*background: -webkit-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* Chrome10+,Safari5.1+ *!/*/
+    /*background: -o-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* Opera 11.10+ *!/*/
+    /*background: -ms-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* IE10+ *!/*/
+    /*background: linear-gradient(to bottom, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* W3C *!/*/
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#31a5bf', endColorstr='#0087a5',GradientType=0 ); /!* IE6-9 *!/*/
 
-  color: white;
-  font-weight: bold;
-  font-size: 110%;
+    color: white;
+    font-weight: bold;
+    font-size: 110%;
 
-  cursor: pointer;
+    cursor:pointer;
 }
 
-.SWXPopupWindowCloseBox,
+.SWXPopupWindowCloseBox, .SWXPopupWindowHelpBox {
+    position:absolute;
+    right:8px;
+    top:8px;
+    cursor:pointer;
+    font-size: 22px;
+    color: white;
+    opacity:0.5;
+    transition:opacity 0.25s linear;
+    /*position:absolute;*/
+    /*right:-10px;*/
+    /*top:-10px;*/
+    /*width:25px;*/
+    /*height:25px;*/
+    /*cursor:pointer;*/
+}
+
 .SWXPopupWindowHelpBox {
-  position: absolute;
-  right: 8px;
-  top: 8px;
-  cursor: pointer;
-  font-size: 22px;
-  color: white;
-  opacity: 0.5;
-  transition: opacity 0.25s linear;
-  /*position:absolute;*/
-  /*right:-10px;*/
-  /*top:-10px;*/
-  /*width:25px;*/
-  /*height:25px;*/
-  /*cursor:pointer;*/
+    right:35px;
+
 }
 
-.SWXPopupWindowHelpBox {
-  right: 35px;
-}
 
-.SWXPopupWindowCloseBox:hover,
-.SWXPopupWindowHelpBox:hover {
-  opacity: 0.9;
-  /*filter: brightness(120%);*/
-  /*-webkit-filter: brightness(120%);*/
-  /*-moz-filter: brightness(120%);*/
-  /*-o-filter: brightness(120%);*/
-  /*-ms-filter: brightness(120%);*/
+.SWXPopupWindowCloseBox:hover, .SWXPopupWindowHelpBox:hover {
+    opacity: 0.9;
+    /*filter: brightness(120%);*/
+    /*-webkit-filter: brightness(120%);*/
+    /*-moz-filter: brightness(120%);*/
+    /*-o-filter: brightness(120%);*/
+    /*-ms-filter: brightness(120%);*/
 }
 
 .SWXPopupWindowDockBox {
-  position: absolute;
-  right: 32px;
-  top: 8px;
-  cursor: pointer;
-  font-size: 22px;
-  color: white;
-  opacity: 0.5;
-  transition: opacity 0.25s linear;
+    position:absolute;
+    right:32px;
+    top:8px;
+    cursor:pointer;
+    font-size: 22px;
+    color: white;
+    opacity:0.5;
+    transition:opacity 0.25s linear;
 }
 
 .SWXPopupWindowDockBox:hover {
-  opacity: 0.9;
+    opacity: 0.9;
 }
 
 .AXMPopupWindowClient {
-  background-color: white;
+    background-color: white;
 }
 
-.AXMPopupWindowGripSE,
-.AXMPopupWindowGripNW,
-.AXMPopupWindowGripSW,
-.AXMPopupWindowGripNE,
-.AXMPopupWindowGripSW,
-.AXMPopupWindowGripN,
-.AXMPopupWindowGripS,
-.AXMPopupWindowGripE,
-.AXMPopupWindowGripW {
-  position: absolute;
-  background-color: white;
-  opacity: 0;
+.AXMPopupWindowGripSE, .AXMPopupWindowGripNW, .AXMPopupWindowGripSW, .AXMPopupWindowGripNE, .AXMPopupWindowGripSW, .AXMPopupWindowGripN, .AXMPopupWindowGripS, .AXMPopupWindowGripE, .AXMPopupWindowGripW {
+    position: absolute;
+    background-color: white;
+    opacity: 0;
 }
 
-.AXMPopupWindowGripSE,
-.AXMPopupWindowGripNW {
-  cursor: nwse-resize;
+.AXMPopupWindowGripSE, .AXMPopupWindowGripNW {
+    cursor:nwse-resize;
 }
 
-.AXMPopupWindowGripNE,
-.AXMPopupWindowGripSW {
-  cursor: nesw-resize;
+.AXMPopupWindowGripNE, .AXMPopupWindowGripSW {
+    cursor:nesw-resize;
 }
 
-.AXMPopupWindowGripN,
-.AXMPopupWindowGripS {
-  cursor: ns-resize;
+
+.AXMPopupWindowGripN, .AXMPopupWindowGripS {
+    cursor:ns-resize;
 }
 
-.AXMPopupWindowGripE,
-.AXMPopupWindowGripW {
-  cursor: ew-resize;
+.AXMPopupWindowGripE, .AXMPopupWindowGripW {
+    cursor:ew-resize;
 }
+
+
+
 
 .AXMTransientContainer {
-  left: 90px;
-  top: 70px;
-  position: absolute;
-  background-color: #fafafa;
+    left:90px;
+    top:70px;
+    position:absolute;
+    background-color: #fafafa;
 
-  border-radius: 10px;
-  border: 1px solid rgb(179, 179, 179);
-  box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    border:1px solid rgb(179, 179, 179);
+    box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.25);
 }
 
+
 .AXMTransientContainerArrow {
-  content: "";
-  position: absolute;
-  height: 16px;
-  width: 16px;
-  background-color: #fafafa;
-  /*margin-left: -20px;*/
-  /*margin-bottom: -20px;*/
-  -moz-transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+    content: "";
+    position: absolute;
+    height: 16px;
+    width: 16px;
+    background-color: #fafafa;
+    /*margin-left: -20px;*/
+    /*margin-bottom: -20px;*/
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 .AXMTransientContainerArrowTop {
-  top: -9px;
-  border-left: 1px solid rgb(179, 179, 179);
-  border-top: 1px solid rgb(179, 179, 179);
+    top: -9px;
+    border-left:1px solid rgb(179, 179, 179);
+    border-top:1px solid rgb(179, 179, 179);
 }
 
 .AXMTransientContainerArrowBottom {
-  bottom: -9px;
-  border-right: 1px solid rgb(179, 179, 179);
-  border-bottom: 1px solid rgb(179, 179, 179);
+    bottom: -9px;
+    border-right:1px solid rgb(179, 179, 179);
+    border-bottom:1px solid rgb(179, 179, 179);
 }
 
+
+
 .AXMTransientClient {
-  padding: 15px;
+    padding: 15px;
 }
 
 .SWXTransientCloseBox {
-  position: absolute;
-  right: 2px;
-  top: 2px;
-  cursor: pointer;
-  font-size: 18px;
-  color: rgb(128, 128, 128);
-  opacity: 0.4;
-  transition: opacity 0.25s linear;
+    position:absolute;
+    right:2px;
+    top:2px;
+    cursor:pointer;
+    font-size: 18px;
+    color: rgb(128,128,128);
+    opacity:0.4;
+    transition:opacity 0.25s linear;
 }
 
 .SWXTransientCloseBox:hover {
-  opacity: 1;
+    opacity: 1.0;
 }
 
+
 .ToolBoxContainer {
-  visibility: hidden;
-  position: absolute;
-  background-color: white;
-  border: 1px solid rgb(179, 179, 179);
-  box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.25);
-  /* vertical scroll if max-height exceeds 80% viewport height */
-  max-height: 80vh;
-  overflow-y: scroll;
+    visibility: hidden;
+    position: absolute;
+    background-color: white;
+    border:1px solid rgb(179, 179, 179);
+    box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.25);
+    /* vertical scroll if max-height exceeds 80% viewport height */
+    max-height: 80vh ;
+    overflow-y: scroll;
 }
