--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -61,10 +61,16 @@
     cursor:pointer;
 }
 
+.SWXPopupWindowButtons {
+    display: inline-flex;
+    justify-content: flex-end;
+    margin-left: auto;
+}
+
 .SWXPopupWindowCloseBox {
-    position:absolute;
-    right:8px;
-    top:8px;
+    position: relative;
+    top: 8px;
+    padding-left: 4px;    
     cursor:pointer;
     font-size: 22px;
     color: white;
@@ -81,7 +87,6 @@
 .SWXPopupWindowHelpBox {
     font-size: 22px;
     position: relative;
-    margin-left: auto;
 }
 
 .AXMBadge {
@@ -98,9 +103,9 @@
 }
 
 .SWXPopupWindowDockBox {
-    position:absolute;
-    right:32px;
-    top:8px;
+    position: relative;
+    top: 8px;
+    padding-left: 4px;
     cursor:pointer;
     font-size: 22px;
     color: white;
