--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -550,3 +550,10 @@ span.AXMBadge {
     padding: 5px 10px;
     margin: 0px 5px;
   }
+
+textarea.CodeEditor {
+    font-family: monospace;
+    font-size: 12px;
+    resize: none;
+    outline: none;
+}
