--- a/CSS/AXMPgTable.css
+++ b/CSS/AXMPgTable.css
@@ -139,7 +139,7 @@
 }
 
 .AXMPgTableColSortBoxActive {
-    color: rgb(0, 64, 149); !important;
+    color: rgb(0, 64, 149) !important;
 }
 
 .AXMPgTableColOpenBox {
