--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -65,6 +65,7 @@
     display: inline-flex;
     justify-content: flex-end;
     margin-left: auto;
+    line-height: 20px;
 }
 
 .SWXPopupWindowCloseBox {
