use fontaweosme from package instead of link

--- a/CSS/AXM.css
+++ b/CSS/AXM.css
@@ -1,6 +1,7 @@
 @import "AXMPopupWindow.css";
 @import "AXMPgTable.css";
 @import "local.css";
+@import "../node_modules/font-awesome/css/font-awesome.css";
 
 html,body {
     height:100%;
