--- a/CSS/AXMPopupWindow.css
+++ b/CSS/AXMPopupWindow.css
@@ -42,23 +42,14 @@
     padding-right:8px;
     box-sizing: border-box;
     display: inline-flex;
-    /*border-top-left-radius:5px;*/
-    /*border-top-right-radius:5px;*/
-
-    /*background: rgb(49,165,191); /!* Old browsers *!/*/
-    /*background: -moz-linear-gradient(top, rgba(49,165,191,1) 0%, rgba(0,135,165,1) 100%); /!* FF3.6+ *!/*/
-    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(49,165,191,1)), color-stop(100%,rgba(0,135,165,1))); /!* Chrome,Safari4+ *!/*/
-    /*background: -webkit-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* Chrome10+,Safari5.1+ *!/*/
-    /*background: -o-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* Opera 11.10+ *!/*/
-    /*background: -ms-linear-gradient(top, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* IE10+ *!/*/
-    /*background: linear-gradient(to bottom, rgba(49,165,191,1) 0%,rgba(0,135,165,1) 100%); /!* W3C *!/*/
-    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#31a5bf', endColorstr='#0087a5',GradientType=0 ); /!* IE6-9 *!/*/
-
     color: white;
     font-weight: bold;
     font-size: 110%;
-
     cursor:pointer;
+}
+
+.AXMPopupLabelsPlaceholder{
+    line-height: 1;
 }
 
 .SWXPopupWindowButtons {
